# macos-setup

./: .gitignore  .pre-commit-config.yaml  README.md  macos-setup.sh  requirements.txt
.github/workflows/: ci.yml  main.yml
ansible/: .ansible-lint.yml  .yamllint.yml  ansible.cfg  config.yml  homebrew.yml  inventory.ini  playbook.yml  requirements.txt  vars.yml
ansible/macos/: dockutil.yml  dotfile.yml  programs.yml  stefi.yml  system.yml  terminal.yml  vars.yml
ansible/molecule/default/: molecule.yml
ansible/scripts/: macos-setup.sh  prepare-environment.sh  run-tasks.sh  terminal-setup.sh  windows-setup.ps1
ansible/tasks/: darwin-system.yml  dock.yml  dockutil.yml  dotfile.yml  finder.yml  homebrew.yml  package.yml  packages.yml  programs.yml  startup.yml  system.yml  terminal.yml  win_terminal.yml
ansible/tests/: packages_test.yml
ansible/unix/: vars.yml
ansible/windows/: programs.txt  programs.yml  system.yml  terminal.yml  vars.yml
choco/: README.md  choco.ps1  programs.txt
docs/: choco.md  macos-complete-ansible.md  macos-manual-settings.md  macos-manual.md  macos-setup-ansible.md  macos-setup-nix-darwin.md  macos-setup-nix.md  macos-setup.md  macos-terminal-ansible.md  macos-terminal-setup.md  nixos-complete-nix.md  ubuntu-terminal-ansible.md  ubuntu-terminal-setup.md  vm-setup-nix.md  windows-choco.md  windows-chocolatey.md  windows-manual.md  windows-setup-ansible.md
dotfiles/brew/: Brewfile
dotfiles/choco/: README.md  choco.ps1
dotfiles/config/alacritty/: alacritty.toml
dotfiles/config/atuin/: config.toml
dotfiles/config/btop/: btop.conf
dotfiles/config/fastfetch/: config.jsonc
dotfiles/config/oh-my-posh/: oh-my-posh.toml
dotfiles/config/tmux/: .tmux.conf
dotfiles/git/: .gitconfig  .gitignore_global
dotfiles/nix/: configuration.nix  disk-config.nix  nixos-snippets.sh
dotfiles/python/: .pre-commit-config.yaml  mypy.ini  pyproject.toml  ruff.toml  tox.ini
dotfiles/shell/: .lessfilter  .omp.toml  .zshrc  Microsoft.PowerShell_profile.ps1  no-omz.zshrc
dotfiles/sublime/: Preferences.sublime-settings
dotfiles/tmux/: .tmux.conf
dotfiles/vscode/: settings.json
nix/: flake.nix  mksystem.nix  nix-darwin.nix  nixos.nix
nix-new/: flake.nix  mksystem.nix
nix-new/home-manager/: configuration.nix  default.nix  nixos.nix  packages.nix
nix-new/modules/: configuration.nix  packages.nix
nix-new/nix/: mksystem.nix  nix-darwin.nix
nix-new/nix-darwin/: configuration.nix  default.nix
nix-new/nixos/: configuration.nix  default.nix
nix/hosts/: macbook.nix
nix/machines/: macbook.nix  vm-aarch64.nix  vm.nix
nix/modules/: home-manager.nix  nix-homebrew.nix  packages.nix  programs.nix
nix/nix-darwin/: flake.nix
nix/nixos/: configuration.nix  flake.nix
nix/parallels/: configuration.nix  hardware-configuration.nix
scripts/: macos-setup.sh  run-tasks.sh  terminal-setup.sh
(+21 files in other folders)
